<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_nodes</name>
  <version>0.0.0</version>
  <description>Gesture recognition and control for TurtleBot3</description>
  <maintainer email="madiyar@todo.todo">madiyar</maintainer>
  <license>Apache License 2.0</license>

  <!-- Core dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ament_index_python</depend>

  <!-- Python package dependencies -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-mediapipe</exec_depend>
  <exec_depend>python3-tensorflow</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>